--- a/webshop/webapp/model/mlsettings.json
+++ b/webshop/webapp/model/mlsettings.json
@@ -3,6 +3,6 @@
 	"url": "https://sandbox.api.sap.com/ml/imageclassifier/inference_sync",
 	"headers": {
 		"Accept": "application/json",
-		"APIKey": "ta0afXGvInTgTHtjQqclBQqbUZQYQ7Qw"
+		"APIKey": "<< API KEY >>"
 	}
 }
